--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "type": "module",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "replicate": "^1.0.1"
   }
